# llm-evaluation-platform

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: main.yml
scripts/: run_evaluation.py
src/: __init__.py
src/analytics/: analyzer.py
src/core/: engine.py
tests/: conftest.py
